
- Issue #8164: Don't allow lambda functions to have a docstring.

- Issue #3137: Don't ignore errors at startup, especially a keyboard interrupt
  (SIGINT).  If an error occurs while importing the site module, the error is
  printed and Python exits.  Initialize the GIL before importing the site
  module.

- Code objects now support weak references.

Library
-------

- Issue #8294: The Fraction constructor now accepts Decimal and float
  instances directly.

- Issue #7279: Comparisons involving a Decimal signaling NaN now
  signal InvalidOperation instead of returning False.  (Comparisons
  involving a quiet NaN are unchanged.)  Also, Decimal quiet NaNs
  are now hashable;  Decimal signaling NaNs remain unhashable.

- Issue #2531: Comparison operations between floats and Decimal
  instances now return a result based on the numeric values of the
  operands;  previously they returned an arbitrary result based on
  the relative ordering of id(float) and id(Decimal).

- Issue #8233: When run as a script, py_compile.py optionally takes a single
  argument `-` which tells it to read files to compile from stdin.  Each line
  is read on demand and the named file is compiled immediately.  (Original
  patch by Piotr Ożarowski).

- Issue #3135: Add inspect.getcallargs, which binds arguments to a function
  like a normal call.

- Backwards incompatible change: Unicode codepoints line tabulation (0x0B) and
  form feed (0x0C) are now considered linebreaks, as specified in Unicode
  Standard Annex #14.  See issue #7643.
  http://www.unicode.org/reports/tr14/

- Comparisons using one of <, <=, >, >= between a complex instance and
  a Fractions instance now raise TypeError instead of returning
  True/False.  This makes Fraction <=> complex comparisons consistent with
  int <=> complex, float <=> complex, and complex <=> complex comparisons.

- Addition of ``WeakSet`` to the ``weakref`` module.

- logging: Added LOG_FTP to SysLogHandler and updated documentation.
